continuando a home screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,7 @@
     <string name="createAccount">Create account</string>
     <string name="always">Already have an account?</string>
     <string name="title_activity_home">Home</string>
+    <string name="you_are_in_paris">You\'re in Paris</string>
+    <string name="my_trip">My Trips</string>
 
 </resources>
